# miga-mcp-gateway

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  FEDERATION.md
helm/miga/: Chart.yaml  values.yaml
helm/miga/templates/: gateway.yaml  ingress.yaml  redis.yaml  servers.yaml
miga_shared/: __init__.py  errors.py  models.py  server_base.py
miga_shared/agntcy/: __init__.py
miga_shared/auth/: __init__.py
miga_shared/clients/: __init__.py
miga_shared/utils/: __init__.py  formatters.py  redis_bus.py
scripts/: setup.sh
servers/appdynamics_mcp/: server.py
servers/catalyst_center_mcp/: server.py
servers/hypershield_mcp/: server.py
servers/infer_mcp/: server.py
servers/ise_mcp/: server.py
servers/meraki_mcp/: server.py
servers/netbox_mcp/: server.py
servers/nexus_dashboard_mcp/: server.py
servers/sdwan_mcp/: server.py
servers/security_cloud_control_mcp/: server.py
servers/servicenow_mcp/: server.py
servers/splunk_mcp/: server.py
servers/thousandeyes_mcp/: server.py
servers/webex_mcp/: server.py
servers/xdr_mcp/: server.py
tests/: conftest.py  test_cards.py  test_infer.py  test_nlp.py  test_shared.py
